Commit del 20 Settembre 2019 risulti i problemi con il div prenota

--- a/Css/style.css
+++ b/Css/style.css
@@ -391,7 +391,7 @@ h5.testo-card {
     justify-content: center;
 }
 
-.btn-arrow {
+.btn-arrow, .appendIcon, #divPrenotaDetails {
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
     -o-transition-duration: 0.5s;
