--- a/Css/style.css
+++ b/Css/style.css
@@ -16,7 +16,7 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 100%; 
     font-family: 'Archivo', sans-serif;
     font-family: var(--main-font);
     overflow-y: hidden;
@@ -33,7 +33,6 @@ body {
     background-image: url("../Img/bg-div-2.jpg");
     background-size: cover;
     background-position: center center;
-
     height: 100%;
     background-repeat: no-repeat;
     text-align: center;
@@ -49,8 +48,8 @@ body {
 }
 
 .ct-style {
-    width: 50%;
-    margin-left: 25%;
+    width: 70%;
+    margin-left: 15%;
 }
 
 .down {
@@ -105,8 +104,7 @@ div.down .inputIcon i {
 }
 
 
-.form-style,
-.form-select {
+.form-style{
     background-color: rgba(255, 255, 255, .5);
     background-color: var(--input-bright-color);
     border: 2px solid;
