--- a/Css/style.css
+++ b/Css/style.css
@@ -845,6 +845,7 @@ div#offerta_scroll input::placeholder {
     color: white;
     margin-left: 3.2vw;
     margin-right: 3.8vw;
+    padding: 10px;
 }
 
 .modalText p {
